--- a/src/Style.module.css
+++ b/src/Style.module.css
@@ -1,9 +1,4 @@
-:root {
-    --grisHover: #d6d6d6;
-    --blanco: #ffffff;
-    --grisOscuro: #575757;
-    --grisClaro: #f5f5f5; 
-  }
+@import url("./ColoresPagina.css");
 
   @font-face {
     font-family: 'MiFuente';
@@ -22,7 +17,35 @@
     min-height: 100vh;
     box-sizing: border-box;
     position: relative;
-    background-color: var(--grisClaro);
+    background-color: var(--backgroundLight);
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    flex-direction: column;
+}
+
+body::-webkit-scrollbar {
+    width: 9px;
+    background-color: #000000;
+  }
+
+body::-webkit-scrollbar-thumb {
+    background: var(--iconsLight);
+    border-radius: 10px;
+    cursor: pointer;
+  }
+
+  body{
+    overflow-x: hidden ;
+  }
+
+.AppDark{
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    box-sizing: border-box;
+    position: relative;
+    background-color: var(--backgroundDark);
     display: flex;
     align-items: center;
     justify-content: start;
@@ -30,12 +53,23 @@
 }
 
 .AppContent{
-    width: 80%;
+    width: 70%;
     height: 100%;
     min-height: 100vh;
     padding-top: 25px;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
+    z-index: 5;
 }
+
+
+
+
+@media (min-width: 600px) and (max-width: 900px){
+    .AppContent{
+        width: 85%;
+    }
+}
+
 
 @media (max-width: 600px){
     
