--- a/src/estilos/ListaContinentes.module.css
+++ b/src/estilos/ListaContinentes.module.css
@@ -1,11 +1,4 @@
-:root {
-    --grisHover: #dfdfdf;
-    --blanco: #ffffff;
-    --grisOscuro: #575757;
-    --grisClaro: #e4e4e4; 
-    --negro: #000000; 
-    --activeMenu: rgb(255, 0, 106);
-  }
+@import url("../ColoresPagina.css");
 
 
 
@@ -15,26 +8,49 @@
     align-items: center;
     justify-content: space-evenly;
     list-style: none;
+    font-weight: 700;
     width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
     padding: 0 10px;
     flex-wrap: wrap;
-    background-color: #ebebeb;
     border-radius: 50px;
     padding: 5px 0;
-
+    
 }
 
 .element a{
-    color: var(--grisOscuro);
     text-decoration: none;
     padding: 5px 10px;
 }
 
 .element a:hover{
-    color: var(--negro);
     text-decoration: none;
-    background-color: var(--grisHover);
     padding: 5px 10px;
     border-radius: 50px;
+    background-color: var(--hoverBackgroundLight);
+}
+
+.elementDark ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    list-style: none;
+    font-weight: 700;
+    width: 100%;
+    padding: 0 10px;
+    flex-wrap: wrap;
+    border-radius: 50px;
+    padding: 5px 0;
+    color: var(--textosDark);    
+}
+
+.elementDark a{
+    text-decoration: none;
+    padding: 5px 10px;
+}
+
+.elementDark a:hover{
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 50px;
+    background-color: var(--hoverBackgroundLight);
 }
