--- a/src/estilos/busqueda.module.css
+++ b/src/estilos/busqueda.module.css
@@ -1,3 +1,8 @@
+@import url("../ColoresPagina.css");
+
+
+
+
 .riel{
     display: flex;
     align-items: center;
@@ -6,7 +11,6 @@
     border-radius: 10px;
     padding: 5px 0;
     flex-wrap: wrap;
-    background-color: #ebebeb;
     border-radius: 10px;
     padding: 15px 0 ;
 }
@@ -27,7 +31,6 @@
 .miniatura{
     height: 250px;
     width: 170px;
-    background-color: grey;
     border-radius: 10px;
     display: flex;
     justify-content: flex-end;
@@ -77,6 +80,13 @@ a{
 .resultadoTexto{
     width: 100%;
     text-align: center;
+    color: var(--textosLight);
+}
+
+.resultadoTextoDark{
+    width: 100%;
+    text-align: center;
+    color: var(--textosDark);
 }
 
 @media (max-width: 600px){
