--- a/src/estilos/ciudadesStyle.module.css
+++ b/src/estilos/ciudadesStyle.module.css
@@ -1,3 +1,8 @@
+@import url("../ColoresPagina.css");
+
+
+
+
 .riel{
     display: flex;
     align-items: center;
@@ -6,7 +11,6 @@
     border-radius: 10px;
     padding: 5px 0;
     flex-wrap: wrap;
-    background-color: #ebebeb;
     border-radius: 10px;
     padding: 15px 0 ;
 }
@@ -27,7 +31,6 @@
     position: relative;
     height: 250px;
     width: 170px;
-    background-color: grey;
     border-radius: 10px;
     display: flex;
     justify-content: flex-end;
@@ -54,7 +57,6 @@
 .miniaturarecomendados{
     height: 180px;
     width: 180px;
-    background-color: grey;
     border-radius: 10px;
     display: flex;
     justify-content: flex-end;
@@ -82,7 +84,6 @@
 
 .miniatura:hover{
     transform: scale(110%);
-    
     cursor:pointer;
 }
 
