--- a/src/estilos/footer.module.css
+++ b/src/estilos/footer.module.css
@@ -1,10 +1,4 @@
-:root {
-    --grisHover: #dfdfdf;
-    --blanco: #ffffff;
-    --grisOscuro: #575757;
-    --grisClaro: #e4e4e4; 
-    --negro: #000000; 
-  }
+@import url("../ColoresPagina.css");
 
 
 
@@ -12,26 +6,146 @@
 
 .element{
     width: 100%;
-    height: 400px;
-    background-color: var(--grisOscuro);
+    height: 300px;
+    background-color: var(--menuBackgroundLight);
     box-shadow: rgba(0, 0, 0, 0.37) 0px 2px 20px 2px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     padding: 10px;
+    z-index: 4;
+}
+
+
+
+
+.palmeras{
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    z-index: 0;
+    margin-bottom: -20px;
+}
+
+.palmerasCont{
+    position: relative;
+    width: 10px;
+    height: 10px;
+    opacity: 0.6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.palmera1, .palmera2, .palmera3, .palmera4, .palmera5{
+    height: 120px;
+    position: absolute;
+    bottom: 0;
+    transform-origin: bottom;
+    transform: hue-rotate(60deg);
+    
+}
+
+.palmera1{
+    transform: rotate(70deg);
+    filter: hue-rotate(60deg) brightness(0.5);
+    height: 150px;
+    animation: animacionPalmerala1 70s infinite ease;
+}
+
+.palmera2{
+    transform: rotate(35deg);
+    filter: hue-rotate(55deg) brightness(0.7) saturate(0.6);
+}
+
+.palmera3{
+    transform: rotate(0deg);
+    filter: hue-rotate(55deg) brightness(1) saturate(0.6);
+    animation: animacionPalmera 40s infinite ease;
+}
+
+.palmera4{
+    transform: rotate(-35deg);
+    filter: hue-rotate(55deg) brightness(0.7) saturate(0.6);
+    
+}
+
+.palmera5{
+    transform: rotate(-70deg);
+    filter: hue-rotate(60deg) brightness(0.5);
+    height: 150px;
+    animation: animacionPalmerala5 70s infinite ease;
+}
+
+
+
+@keyframes animacionPalmera{
+    0%{ transform: rotate(0deg);}
+    10%{transform: rotate(10deg);}
+    20%{transform: rotate(-10deg);}
+    30%{transform: rotate(10deg);}
+    40%{transform: rotate(-10deg);}
+    50%{transform: rotate(10deg);}
+    60%{transform: rotate(-10deg);}
+    70%{transform: rotate(10deg);}
+    80%{transform: rotate(-10deg);}
+    100%{transform: rotate(0deg);}
+    
+}
+
+@keyframes animacionPalmerala5{
+    0%{ transform: rotate(-60deg);}
+    10%{transform: rotate(-80deg);}
+    20%{transform: rotate(-60deg);}
+    30%{transform: rotate(-80deg);}
+    40%{transform: rotate(-60deg);}
+    50%{transform: rotate(-80deg);}
+    60%{transform: rotate(-60deg);}
+    70%{transform: rotate(-80deg);}
+    80%{transform: rotate(-60deg);}
+    100%{transform: rotate(-60deg);}
+    
+}
+
+@keyframes animacionPalmerala1{
+    0%{ transform: rotate(60deg);}
+    10%{transform: rotate(80deg);}
+    20%{transform: rotate(60deg);}
+    30%{transform: rotate(80deg);}
+    40%{transform: rotate(60deg);}
+    50%{transform: rotate(80deg);}
+    60%{transform: rotate(60deg);}
+    70%{transform: rotate(80deg);}
+    80%{transform: rotate(60deg);}
+    100%{transform: rotate(60deg);}
+    
 }
 
 .contenedorFlex{
     display: flex;
     width: 100%;
-    height: 60%;
+    height: 30%;
 
 }
 
 .contInfo{
     width: 50%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contInfo a{
+    text-decoration: none;
+    
+}
+
+.icono{
+    color: white;
+    cursor: pointer;
 }
 
 .creators{
@@ -41,6 +155,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    color: var(--menuTextoLight);
 }
 
 .creators p{
@@ -49,4 +164,11 @@
     color: var(--grisClaro);
     letter-spacing: 1px;
     margin-bottom: 5px;
+}
+
+.creators img{
+    height: 25px;
+    margin-top: 10px;
+    filter: brightness(100);
+    opacity: 0.5;
 }
