--- a/src/estilos/home.module.css
+++ b/src/estilos/home.module.css
@@ -1,5 +1,10 @@
+@import url("../ColoresPagina.css");
+
+
+
+
 .tituloPrincipal{
-    color: white;
+    color: var(--titulosLight);
 }
 
 
@@ -7,7 +12,6 @@
 .portada{
     height: 400px;
     width: 100%;
-    background-color: gray;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -24,7 +28,7 @@
     text-align: center;
     width: 100%;
     z-index: 2;
-    color: white;
+    color: var(--titulosLight);
     text-shadow: 2px 2px 10px #000000;
 }
 
@@ -33,19 +37,36 @@
     letter-spacing: 0.5px;
     line-height: 30px;
     font-size: 1.1rem;
+    color:var(--textosLight) ;
+}
+
+.contenidoDark{
+    margin: 40px 0;
+    letter-spacing: 0.5px;
+    line-height: 30px;
+    font-size: 1.1rem;
+    color:var(--textosDark) ;
 }
 
 
 .iconStandard{
     margin-right: 10px;
+    color: var(--avtiveMenuLight);
 }
 
 .tituloIcono{
     display: flex;
     align-items: center;
     justify-content: start;
+    color: var(--subTituloLight);
 }
 
+.tituloIconoDark{
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    color: var(--subTituloDark);
+}
 
 .riel{
     height: 360px;
@@ -145,7 +166,10 @@
 
 @media (max-width: 600px){
     .portada{
-        height: 250px;
+        height: 230px;
+    }
+    .portada img{
+        width: 130%;
     }
     .info{
         height: 100px;
