--- a/src/estilos/paisesStyle.module.css
+++ b/src/estilos/paisesStyle.module.css
@@ -1,10 +1,13 @@
-:root {
-    --grisHover: #dfdfdf;
-    --blanco: #ffffff;
-    --grisOscuro: #575757;
-    --grisClaro: #e4e4e4; 
-    --negro: #000000; 
-  }
+@import url("../ColoresPagina.css");
+
+
+.light h3{
+    color: var(--textosLight);
+}
+
+.dark h3{
+    color: var(--textosDark);
+}
 
 
 
@@ -14,7 +17,6 @@
     justify-content: center;
     margin-top: 30px;
     flex-wrap: wrap;
-    background-color: #ebebeb;
     border-radius: 20px;
     padding: 15px 0 ;
 }
@@ -53,7 +55,6 @@
     overflow: hidden;
     height: 180px;
     width: 160px;
-    background-color: grey;
     border-radius: 10px;
     display: flex;
     justify-content: flex-end;
@@ -67,7 +68,7 @@
 }
 
 .miniatura:hover > .info{
-    color: rgb(255, 0, 179);
+    color: var(--avtiveMenuLight);
 }
 
 
@@ -80,8 +81,8 @@
 
 
     .miniatura{
-        height: 130px;
-        width: 300px;
+        height: 200px;
+        width: 200px;
         justify-content: center;
         }
     
