--- a/src/estilos/tuDestino.module.css
+++ b/src/estilos/tuDestino.module.css
@@ -1,11 +1,83 @@
+@import url("../ColoresPagina.css");
 
-:root {
-    --grisHover: #dfdfdf;
-    --blanco: #ffffff;
-    --grisOscuro: #575757;
-    --grisClaro: #e4e4e4; 
-    --negro: #000000; 
-  }
+.light p{
+    color: var(--textosLight);
+}
+
+.dark p{
+    color: var(--textosDark);
+}
+
+.light .alojamientoTitulo{
+    color: var(--subTituloLight);
+}
+
+.dark .alojamientoTitulo{
+    color: var(--subTituloDark);
+}
+
+.light .recomendacionesTitulo{
+    color: var(--subTituloLight);
+}
+
+.dark .recomendacionesTitulo{
+    color: var(--subTituloDark);
+}
+
+.light .iconStandard{
+    color: var(--iconsLight);
+}
+
+.dark .iconStandard{
+    color: var(--iconsDark);
+}
+
+.light .contenedorPrincipal{
+    background-color: var(--hoverBackgroundLight);
+    color: var(--menuTextoLight);
+}
+
+.dark .contenedorPrincipal{
+    background-color: var(--hoverBackgroundLight);
+    color: var(--menuTextoLight);
+}
+
+.light .contenedorPrincipal p{
+    color: var(--textosLight);
+}
+
+.dark .contenedorPrincipal p{
+    color: var(--textosDark);
+}
+
+.light .contenedorPrincipal h4{
+    color: var(--textosLight);
+}
+
+.dark .contenedorPrincipal h4{
+    color: var(--textosDark);
+}
+
+.dark .divisa {
+    color: var(--textosDark);
+    background-color: var(--menuBackgroundLight);
+}
+
+.light .divisa {
+    color: var(--textosDark);
+    background-color: var(--menuBackgroundLight);
+
+}
+.light .clima p{
+    color: var(--menuTextoLight);
+}
+
+.dark .clima p{
+    color: var(--textosDark);
+}
+
+
+
 
 
 
@@ -15,7 +87,6 @@
 .portada{
     height: 400px;
     width: 100%;
-    background-color: gray;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -28,10 +99,9 @@
     border-radius: 5px;
 }
 
-.portada img{
-    width: 100%;
+.portadaIMG{
+    width: 105%;
     position: absolute;
-    top: -50%;
     z-index: 0;
 }
 
@@ -54,7 +124,7 @@
 
 .galeria::-webkit-scrollbar {
     height: 9px;
-    background-color: #d4d4d4;
+    background-color: #000000;
     border-radius: 10px;
   }
 
@@ -68,13 +138,13 @@
     width: 90%;
     font-size: 2.5rem;
     text-align: center;
-    color: rgb(255, 255, 255);
+    color: var(--titulosLight);
     text-shadow:2px 2px 8px rgb(0, 0, 0);
     z-index: 2;
 }
 
 .infoCiudad{
-    color: rgb(204, 204, 204);
+    color: var(--titulosLight);
     font-size: 0.8rem;
     width: 100%;
     letter-spacing: 1px;
@@ -89,6 +159,7 @@
 }
 
 .infoCiudad p{
+    color: var(--textos);
     background-color: rgba(0, 0, 0, 0.719);
     padding: 5px 10px;
     border-radius: 50px;
@@ -98,7 +169,6 @@
     letter-spacing: 0.5px;
     line-height: 30px;
     font-size: 1.1rem;
-
 }
 
 .textoPrincipal p{
@@ -126,8 +196,9 @@
 }
 
 .textoPrincipal img{
-    height: 300px;
-    margin:  5px;
+    height: 320px;
+    aspect-ratio: 1/1;
+    margin:  40px 5px;
     border-radius: 10px;
 }
 
@@ -142,7 +213,6 @@
     margin-top: 20px;
     margin-bottom: 20px;
     margin-right: 20px;
-    background-color: #cccccc;
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.151) 5px 2px 8px 2px;
     width: 45%;
@@ -154,6 +224,7 @@
     flex-direction: column;
     padding: 5px;
 }
+
 
 .contenedorFlex{
     display: flex;
@@ -182,11 +253,9 @@
 
 .paHacerInfo p{
     margin-top: 10px;
-    color: rgb(0, 0, 0);
 }
 
 .paHacerInfo h4{
-    color: rgb(0, 0, 0);
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
@@ -207,7 +276,6 @@
 .divisa{
     margin-left: 10px;
     background-color: rgb(48, 48, 48);
-    color: rgb(255, 255, 255);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -240,10 +308,10 @@
     width: 100%;
     text-align: center;
     font-weight: 700;
-    color: gray;
     display: flex;
     align-items: center;
     justify-content: center;
+    opacity: 0.5;
 }
 
 .corazon{
@@ -266,6 +334,42 @@
 }
 
 
+.clima{
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    background-color: rgba(0, 19, 32, 0.589);
+    top: 0px;
+    right: auto;
+    z-index: 2;
+    border-radius: 0 0 50px 50px ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transform: scale(1.2);
+    box-shadow: rgba(0, 0, 0, 0.308) 5px 2px 8px 2px;
+}
+
+.clima p{
+    font-size: 0.7rem;
+    text-shadow: 1px 1px 5px rgb(0, 0, 0);
+    font-weight: 700;
+    letter-spacing: 0.5px;
+}
+
+.clima p:nth-child(3){
+    margin-top: 4px;
+}
+
+.climaIcon{
+    width: 46px !important;
+    margin-top: -15px;
+    filter: drop-shadow( 2px 2px 10px rgb(18, 19, 44)) brightness(2.2);
+    margin-bottom: -5px;
+}
+
 
 
 @media (min-width: 600px) and (max-width: 900px){
@@ -284,11 +388,12 @@
     }
 
     .portada{
-        height: 250px;
+        height: 300px;
     }
 
-    .portada img{
-        top: -30%;
+
+    .portada h1{
+        width: 80%;
     }
 
 }
@@ -296,13 +401,21 @@
 
 @media (max-width: 600px){
 
+
     .portada{
-        height: 250px;
+        height: 290px;
+    }
+
+    .portada h1{
+        font-size: 1.7rem;
     }
 
     .portada img{
         top: 0;
+        width: 180%;
     }
+
+   
 
     .galeria{
         display: flex;
